# istominiko

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
istomino/: asgi.py  settings.py  urls.py  wsgi.py
media/: 2.2 карт 3 и текс.txt
media/img/: images (5).jfif  Без названия (1).jfif  Без названия.jfif
static/img/: images (6).jfif  images.jfif  Без названия (2).jfif  Без названия (3).jfif
templates/: index.html
whatsapp/: admin.py  forms.py  models.py  urls.py  views.py
whatsapp/migrations/: 0001_initial.py
