[tool.poetry]
name = "istomino"
version = "0.1.0"
description = ""
authors = ["uhiintezz <oignatevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
django = "^5.0.6"
django-debug-toolbar = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
